--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,151 +1,170 @@
 * {
-    border: none;
-    border-radius: 0px;
-    font-family: "JetBrainsMono Nerd Font";
-    font-weight: bold;
-    font-size: 15px;
-    min-height: 10px;
+  border: none;
+  border-radius: 0;
+  font-family: monospace;
+  font-weight: bold;
+  font-size: 12px;
+  min-height: 0;
 }
 
-@import "themes/Catppuccin-Mocha.css";
-
 window#waybar {
-    background: @bar-bg;
+  background: rgba(21, 18, 27, 0);
+  color: #cdd6f4;
+}
+
+window#waybar.empty #window {
+  /* background: rgba(21, 18, 27, 0); */
+  background: none;
+  border: 0;
 }
 
 tooltip {
-    background: @tool-bg;
-    color: @tool-color;
-    border-radius: 22px;
-    border-width: 1px;
-    border-style: solid;
-    border-color: @tool-border;
+  background: #1e1e2e;
+  border-radius: 10px;
+  border-width: 2px;
+  border-style: solid;
+  border-color: #11111b;
 }
 
 #workspaces button {
-    box-shadow: none;
-	text-shadow: none;
-    padding: 0px;
-    border-radius: 9px;
-    margin-top: 3px;
-    margin-bottom: 3px;
-    padding-left: 3px;
-    padding-right: 3px;
-    color: @wb-color;
-    animation: gradient_f 20s ease-in infinite;
-    transition: all 0.5s cubic-bezier(.55,-0.68,.48,1.682);
+  padding: 5px;
+  color: #313244;
+  margin-right: 5px;
 }
 
 #workspaces button.active {
-    background: @wb-act-bg;
-    color: @wb-act-color;
-    margin-left: 3px;
-    padding-left: 12px;
-    padding-right: 12px;
-    margin-right: 3px;
-    animation: gradient_f 20s ease-in infinite;
-    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
+  color: #a6adc8;
+}
+
+#workspaces button.focused {
+  color: #a6adc8;
+  background: #eba0ac;
+  border-radius: 10px;
+}
+
+#workspaces button.urgent {
+  color: #11111b;
+  background: #a6e3a1;
+  border-radius: 10px;
 }
 
 #workspaces button:hover {
-    background: @wb-hvr-bg;
-    color: @wb-hvr-color;
-    padding-left: 3px;
-    padding-right: 3px;
-    animation: gradient_f 20s ease-in infinite;
-    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
+  background: #11111b;
+  color: #cdd6f4;
+  border-radius: 10px;
 }
 
-#taskbar button {
-    box-shadow: none;
-	text-shadow: none;
-    padding: 0px;
-    border-radius: 9px;
-    margin-top: 3px;
-    margin-bottom: 3px;
-    padding-left: 3px;
-    padding-right: 3px;
-    color: @wb-color;
-    animation: gradient_f 20s ease-in infinite;
-    transition: all 0.5s cubic-bezier(.55,-0.68,.48,1.682);
-}
-
-#taskbar button.active {
-    background: @wb-act-bg;
-    color: @wb-act-color;
-    margin-left: 3px;
-    padding-left: 12px;
-    padding-right: 12px;
-    margin-right: 3px;
-    animation: gradient_f 20s ease-in infinite;
-    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
-}
-
-#taskbar button:hover {
-    background: @wb-hvr-bg;
-    color: @wb-hvr-color;
-    padding-left: 3px;
-    padding-right: 3px;
-    animation: gradient_f 20s ease-in infinite;
-    transition: all 0.3s cubic-bezier(.55,-0.68,.48,1.682);
-}
-
-#cpu,
-#battery,
-#battery#bat2,
-#memory,
-#clock,
-#workspaces,
-#window,
-#taskbar,
-#network,
-#bluetooth,
-#pulseaudio,
-#mpris,
+#custom-language,
 #custom-updates,
-#custom-wallchange,
-#custom-mode,
-#custom-cliphist,
-#custom-power,
-#custom-wbar,
-#custom-l_end,
-#custom-r_end,
-#custom-sl_end,
-#custom-sr_end,
-#tray {
-    color: @main-color;
-    background: @main-bg;
-    opacity: 1;
-    margin: 4px 0px 4px 0px;
-    padding-left: 4px;
-    padding-right: 4px;
-}
-
+#custom-caffeine,
+#window,
+#clock,
+#battery,
+#pulseaudio,
+#cpu,
+#memory,
+#network,
 #workspaces,
-#taskbar {
-    padding: 0px;
+#tray,
+#backlight,
+#custom-power,
+#custom-wallchange {
+  background: #1e1e2e;
+  padding: 0px 10px;
+  margin: 3px 0px;
+  margin-top: 6px;
 }
 
-#custom-r_end {
-    border-radius: 0px 22px 22px 0px;
-    margin-right: 9px;
-    padding-right: 3px;
+#tray {
+  border-radius: 10px;
+  margin-right: 10px;
 }
 
-#custom-l_end {
-    border-radius: 22px 0px 0px 22px;
-    margin-left: 9px;
-    padding-left: 3px;
+#workspaces {
+  background: #1e1e2e;
+  border-radius: 10px;
+  margin-left: 10px;
+  padding-right: 0px;
+  padding-left: 5px;
 }
 
-#custom-sr_end {
-    border-radius: 0px;
-    margin-right: 9px;
-    padding-right: 3px;
+#custom-caffeine {
+  color: #89dceb;
+  border-radius: 10px 0px 0px 10px;
+  border-right: 0px;
+  margin-left: 10px;
 }
 
-#custom-sl_end {
-    border-radius: 0px;
-    margin-left: 9px;
-    padding-left: 3px;
+#custom-language {
+  color: #f38ba8;
+  border-left: 0px;
+  border-right: 0px;
+}
+
+#custom-updates {
+  color: #f5c2e7;
+  border-left: 0px;
+  border-right: 0px;
+}
+
+#window {
+  border-radius: 10px;
+  margin-left: 60px;
+  margin-right: 60px;
+}
+
+#clock {
+  color: #f9e2af;
+  border-radius: 10px;
+  margin-left: 10px;
+}
+
+#network {
+  color: #fab387;
+  border-radius: 10px 0 0 10px;
+  border-left: 0px;
+  border-right: 0px;
+}
+
+#pulseaudio {
+  color: #89b4fa;
+  border-left: 0px;
+  border-right: 0px;
+}
+
+#custom-wallchange {
+  color: #89b4fa;
+  border-left: 0px;
+  border-right: 0px;
+}
+
+#battery {
+  color: #a6e3a1;
+  border-radius: 0 10px 10px 0;
+  margin-right: 10px;
+  border-left: 0px;
+}
+
+#custom-power {
+  color: #a6e3a1;
+  border-radius: 10px 10px 10px 10px;
+  margin-right: 10px;
+}
+
+#memory {
+  color: #a6e3a1;
+  border-radius: 10px 10px 10px 10px;
+}
+
+#cpu {
+  color: #a6e3a1;
+  border-radius: 10px 10px 10px 10px;
+  margin-right: 10px;
+  margin-left: 10px;
+}
+
+#backlight {
+  color: #cba6f7;
+  border-left: 0px;
+  border-right: 0px;
 }
